# ppx_fields_conv

./: CHANGES.md  INSTALL.txt  META.ab  Makefile  README.md  README.md.orig  README.mdx  README.mdx.orig  _oasis  _tags  install.ml  myocamlbuild.ml  opam  ppx_fields_conv.opam  setup.ml
bench/: bench_fields.ml  dune  field_setting_bench.ml  jbuild
example/: dune  input.mli  jbuild  test.ml  test.mli
js-utils/: install_tags.ml
src/: META  dune  jbuild  ppx_fields_conv.ml  ppx_fields_conv.mldylib  ppx_fields_conv.mli  selector.ml  selector.mli
test/: arguments.mlt  deriving_clause.mlt  deriving_inline.ml  deriving_inline.mli  deriving_inline_with_mli.ml  deriving_inline_with_mli.mli  deriving_inline_without_mli.ml  dune  fields_test.ml  fieldslib_test.ml  jbuild  kinds_in_map_poly.mlt  private.mlt  selector_tests.ml  shadow.mlt  test1.ml  test2.ml  test3.ml  test4.ml  test5.ml  test6.ml  test7.ml  test8.ml  test_ok.ml  zero_alloc_test.ml  zero_alloc_test.mli  zero_alloc_test.mlt
test/test_do_not_require_specifiers/: dune  fieldslib_test_do_not_require_specifiers.ml  no_specifiers.ml  no_specifiers.mli
