(library
 (name fieldslib_test)
 (libraries base fieldslib ppx_fields_conv)
 (preprocess
  (pps ppx_compare ppx_fields_conv ppx_inline_test ppx_template)))

(rule
 (targets example_from_doc.ml)
 (deps ../README.mdx gen_test_from_doc.sh)
 (action
  (bash "./gen_test_from_doc.sh ../README.mdx > %{targets}")))
